--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,8 @@ jobs:
   gradle:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
 
     - name: Setup JVM
       uses: actions/setup-java@v3
@@ -27,7 +28,7 @@ jobs:
         java-version: 17
 
     - name: Setup Kotlin
-    - uses: fwilhe2/setup-kotlin@main
+      uses: fwilhe2/setup-kotlin@main
       with:
         version: 1.7.0
 
